--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ prompt-toolkit==3.0.36
 pure-eval==0.2.2
 Pygments==2.14.0
 python-dateutil==2.8.2
+python-dotenv==0.21.1
 pytz==2022.7.1
 six==1.16.0
 SQLAlchemy==1.4.46
